feat: datafeed create api

--- a/client.html
+++ b/client.html
@@ -69,7 +69,7 @@
     <br>
     <br>
     <div id="client-data">
-        <input id="id" placeholder="id" type="text">
+        <input id="datafeedid" placeholder="datafeedid" type="text">
         <input id="availability" placeholder="availability" type="text">
         <input id="condition" placeholder="condition" type="text">
         <input id="description" placeholder="description" type="text">
